# VideoPlayer

./: CMakeLists.txt  bug.txt
module/VideoPlayer/lib/: CMakeLists.txt
src/: main.cpp
src/Widget/: ShowVideoWidget.cpp
